	-Added automated signing and verification
		-default signing mode toggled in "--setup"
		-automatically signs blocks with the key indicated in setup
		-verifies the signature for blocks read in -rcv mode. If the signature can't be sufficiently verified, asks the user whether or not to continue
		-full documentation in readme
	-Added skipped file logging
		-a list of files too large to fit into the user-defined block is now generated and saved together with the packaged blocks on the desktop

v0.2.2 (release):
	-Now possible to allow a "keyring-only mode", which skips keyloading/keyremoval.
	-Fixed bug in recovery that would crash Tapestry on an unknown category.
	-Organization improvements: outputs moved to a subdirectory on the desktop, rather than loose.
	-Script will now check to see if loopback pinentry is enabled. If it is not, it will ask the user for permission to add it, or disable signing-by-default.

v0.3.0 (release):
    -Multiprocessing is now used for some steps of operation.
    --Decision was made to improve performance.
    -Discontinued the use of bz2 compression for performance reasons. Increased op time unjustified.
    -Changed structure of the compression operation, may lead to performance impacts. See readme
    -Recovery pickle is now added to all blocks(old was block1).
    -Minor fixes to various naming systems.

v1.0 (dev):
    -Killed KeyringMode=False with fire.
    -The `--setup` flag is now deprecated. Please avoid use.
    -Removed internal requests for pin/passphrase to force pinentry popout.
    -Switched to UUIDs for the FID value, rather than a counter.
    --Eliminates Collisions
    -Fixed an issue with the blockbuild process that could generate empty blocks pointlessly.
    -Added `--genKey`, the new-key generation call.
    -Began implementation of unit testing.
    -Added "recovery path" to configuration file for testing purposes.
    -Added "output path" to configuration file for user config.