@@ -8,6 +8,8 @@ signing fp = E1229B2A2DF4F2FE50A5A23FF373FF4B43FC742F
 recovery path = /home/patches/Documents/Scripting_Projects/Resources/Tapestry Testbed/media
 output path = /home/patches/Desktop/Tapestry Outputs
 keysize = 2048
+use compression = True
+compression level = 9
 
 [Default Locations/Nix]
 docs = /home/patches/Documents/Scripting_Projects/Resources/Tapestry Testbed/Docs
